Update Client Terminé

--- a/Projet2_base_silex/App/View/frontOff/User/userEdit.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/User/userEdit.html.twig
@@ -7,10 +7,10 @@
                 <div class="row corp modal-content col-lg-6 col-lg-offset-3">
                     <fieldset>
                         <legend>Modifier vos infos, {{ app.session.get('login') }}</legend>
-                        <input name="id"  type="hidden" value="{{clients.id|default('')}}" />
+                        <input name="id"  type="hidden" value="{{clients.login|default('')}}" />
                         <div class="form-group">
                             <div class="form-group row">
-                                <label for="example-text-input" class="col-xs-2 col-form-label">Nom (*)</label>
+                                <label for="example-text-input" class="col-xs-2 col-form-label">Nom *</label>
                                 <div class="col-xs-10">
                                     <input class="form-control"name="nom"  type="text"  size="18" value="{{clients.nom|default('')}}" />
                                 </div>
@@ -20,10 +20,11 @@
                                     <strong>Erreur!</strong> {{erreurs.nom}}
                                 </div>
                             {% endif %}
+
                             <div class="form-group row">
-                                <label for="example-text-input" class="col-xs-2 col-form-label">adresse (*)</label>
+                                <label for="example-text-input" class="col-xs-2 col-form-label">adresse *</label>
                                 <div class="col-xs-10">
-                                    <input name="photo" class="form-control" type="text"  size="18" value="{{clients.adresse|default('')}}"/>
+                                    <input name="adresse" class="form-control" type="text"  size="18" value="{{clients.adresse|default('')}}"/>
                                 </div>
                             </div>
                             {% if erreurs.adresse is defined %}
@@ -31,10 +32,11 @@
                                     <strong>Erreur!</strong> {{erreurs.adresse}}
                                 </div>
                             {% endif %}
+
                             <div class="form-group row">
-                                <label for="example-text-input" class="col-xs-2 col-form-label">Ville (*)</label>
+                                <label for="example-text-input" class="col-xs-2 col-form-label">Ville *</label>
                                 <div class="col-xs-10">
-                                    <input name="photo" class="form-control" type="text"  size="18" value="{{clients.ville|default('')}}"/>
+                                    <input name="ville" class="form-control" type="text"  size="18" value="{{clients.ville|default('')}}"/>
                                 </div>
                             </div>
                             {% if erreurs.ville is defined %}
@@ -42,10 +44,11 @@
                                     <strong>Erreur!</strong> {{erreurs.ville}}
                                 </div>
                             {% endif %}
+
                             <div class="form-group row">
-                                <label for="example-text-input" class="col-xs-2 col-form-label">Code Postal (*)</label>
+                                <label for="example-text-input" class="col-xs-2 col-form-label">Code Postal *</label>
                                 <div class="col-xs-10">
-                                    <input name="photo" class="form-control" type="text"  size="18" value="{{clients.code_postal|default('')}}"/>
+                                    <input name="code_postal" class="form-control" type="text"  size="18" value="{{clients.code_postal|default('')}}"/>
                                 </div>
                             </div>
                             {% if erreurs.code_postal is defined %}
@@ -53,18 +56,19 @@
                                     <strong>Erreur!</strong> {{erreurs.code_postal}}
                                 </div>
                             {% endif %}
+
                             <div class="form-group row">
-                                <label for="example-text-input" class="col-xs-2 col-form-label">email (*)</label>
+                                <label for="example-text-input" class="col-xs-2 col-form-label">email *</label>
                                 <div class="col-xs-10">
-                                    <input name="photo" class="form-control" type="text"  size="18" value="{{clients.email|default('')}}"/>
+                                    <input name="email" class="form-control" type="text"  size="18" value="{{clients.email|default('')}}"/>
                                 </div>
                             </div>
+                            <input type="hidden" id="_method" name="_method" value="put" />
                             {% if erreurs.email is defined %}
                                 <div class="alert alert-danger ">
                                     <strong>Erreur!</strong> {{erreurs.email}}
                                 </div>
                             {% endif %}
-                            <input type="hidden" id="_method" name="_method" value="put" />
 
                             <hr>
                             <button type="submit" class="btn btn-success btn-block" value="modifier"><span class="glyphicon glyphicon-edit"></span> Modifier</button>
