--- a/Projet2_base_silex/App/View/backOff/Commande/RecapCommands.html.twig
+++ b/Projet2_base_silex/App/View/backOff/Commande/RecapCommands.html.twig
@@ -6,13 +6,13 @@
                 <table class="table table-responsive table-bordered">
                     <caption><h4>Mes Commandes</h4></caption>
                     <thead>
-                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>nom du client</th><th>Date d'achat</th><th>Status</th>
+                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>nom du client</th><th>Date d'achat</th><th>Détails</th><th>Status</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for commande in data if data is not empty %}
                     <tr class="">
-                        <td>{{ commande.id }}</td><td>{{ commande.login }}</td><td>{{ commande.date_achat }}</td>{% if (commande.etat_id==1) %}<td><form method="post"action="{{ path('Commande.EnvoiCommand') }}"><button name="id" value="{{ commande.id }}">Envoyé la commande</button></form></td>{% else %}<td>Envoyé</td>{% endif %}
+                        <td>{{ commande.id }}</td><td>{{ commande.login }}</td><td>{{ commande.date_achat }}</td><td><a href="{{ path('Commande.showDetails',{id:commande.id}) }}">details</a></td>{% if (commande.etat_id==1) %}<td><form method="post"action="{{ path('Commande.EnvoiCommand') }}"><button name="id" value="{{ commande.id }}">Envoyé la commande</button></form></td>{% else %}<td>Envoyé</td>{% endif %}
                     </tr>
                     {% endfor %}
                     </tbody>
