--- a/Projet2_base_silex/App/View/frontOff/Commande/RecapCommands.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/Commande/RecapCommands.html.twig
@@ -6,13 +6,13 @@
                 <table class="table table-responsive table-bordered">
                     <caption><h4>Mes Commandes</h4></caption>
                     <thead>
-                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>Date d'achat</th><th>Status</th>
+                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>Date d'achat</th><th>Status</th><th>Détails</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for commande in data if data is not empty %}
                     <tr class="">
-                        <td>{{ commande.id }}</td><td>{{ commande.date_achat }}</td><td class="text-warning">{{ commande.libelle }}</td>
+                        <td>{{ commande.id }}</td><td>{{ commande.date_achat }}</td><td class="text-warning">{{ commande.libelle }}</td><td><a href="{{ path('Commande.showDetails',{id:commande.id}) }}">details</a></td>
                     </tr>
                     {% endfor %}
                     </tbody>
