Modification du MDP

--- a/Projet2_base_silex/App/View/frontOff/User/userSpace.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/User/userSpace.html.twig
@@ -83,9 +83,9 @@
                         </div>
                     </div>
                     <div class="panel-footer pull-right">
-                        <a href="{{ path('user.modif') }}" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit">Modifier</i></a>
+                        <a href="{{ path('user.modif') }}" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit">Modifier mes infos</i></a>
+                        <a href="{{ path('user.modif') }}" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-edit">Modifier Mot de Passe</i></a>
                         <a href="{{ path('user.logout') }}" data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i> se déconnecter</a>
-                        <a href="{{ path('user.logout') }}" data-original-title="passwd" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i> changer mot de passe</a>
                     </div>
 
                 </div>
