--- a/Projet2_base_silex/App/View/v_session_connexion.html.twig
+++ b/Projet2_base_silex/App/View/v_session_connexion.html.twig
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> mot de passe</label>
-                    <input type="text" class="form-control" name="password" id="password" placeholder="Enter votre mot de passe">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Enter votre mot de passe">
                 </div>
 
                 {% if app.session.get('erreur') is not empty %}
